force-app/main/default/objects/bar__Backup_Object__c/bar__Backup_Object__c.object-meta.xml
<CustomObject>
    <label>Backup Object</label>
    <nameField>
        <label>Backup Object Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Backup Objects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>