force-app/main/default/objects/bar__Backup_Object__c/fields/bar__Active__c.field-meta.xml
<CustomField>
    <fullName>bar__Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>