force-app/main/default/objects/bar__Backup_Object__c/fields/bar__Backup_Policy__c.field-meta.xml
<CustomField>
    <fullName>bar__Backup_Policy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Backup Policy</label>
    <referenceTo>bar__Backup_Policy__c</referenceTo>
    <relationshipLabel>Backup Objects</relationshipLabel>
    <relationshipName>Backup_Objects</relationshipName>
    <type>Lookup</type>
</CustomField>