force-app/main/default/objects/bar__Backup_Object__c/fields/bar__Exclude_Formula_Fields__c.field-meta.xml
<CustomField>
    <fullName>bar__Exclude_Formula_Fields__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exclude Formula Fields</label>
    <type>Checkbox</type>
</CustomField>