force-app/main/default/objects/bar__Backup_Object__c/fields/bar__Unsupported__c.field-meta.xml
<CustomField>
    <fullName>bar__Unsupported__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Unsupported</label>
    <type>Checkbox</type>
</CustomField>